# ddmgr2

./: CMakeLists.txt  README.md  main.cpp
examples/: base_dhcp.txt  base_dhcpv6.txt  base_dns.txt  base_dns_rev.txt  base_dns_rev6.txt  conf.yaml  main.conf
examples/subnets.d/: subnet.yaml
script/: ddmgr2.service  ddmgr2_config.sh  install.sh
src/: flags.cpp  flags.hpp  host.cpp  host.hpp  main.cpp  output.cpp  output.hpp  parse.cpp  parse.hpp  subnet.cpp  subnet.hpp  util.cpp  util.hpp
src/datatypes/: host.cpp  host.hpp  ipv4.cpp  ipv4.hpp  ipv6.cpp  ipv6.hpp  mac.cpp  mac.hpp  mx.cpp  mx.hpp  ns.cpp  ns.hpp  portmap.cpp  portmap.hpp  subnet.cpp  subnet.hpp
